#+TITLE: Guile-PNG News -- history of user-visible changes.
#+STARTUP: content hidestars

Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Changes in version 0.8.0 (2025-03-29)
** Implement a CLI tool for printing PNG data
The tool currently supports only =describe= action which prints out PNG image
data in [[https://orgmode.org/][org-mode]] format in human-readable manner.

A man-page for the tool is generated and installed along with Guile-PNG.
** New =CODE_OF_CONDUCT.org= file
The document is a copy of
<https://www.contributor-covenant.org/version/2/1/code_of_conduct/> converted
into org-mode format.
** =(png version)=: New module
The module contains information about the current Guile-PNG version.
** Changes in =(png graphics rectangle)=
*** =<square>=: New type

* Changes in version 0.7.3 (2024-03-30)
** Implement image transformation methods
The methods below can be found in =(png image-processing rotate)= module:
- =png-image-rotate-90/cw=: 90 degrees clockwise rotation
- =png-image-rotate-90/ccw=: 90 degrees counter-clockwise rotation
- =png-image-flip-vertical=: Vertical flip.
- =png-image-flip-horizontal=: Horizontal flip.
** New high-level API for manipulating image pixels
=(png graphics pixel)= now provides two high-level procedures for manipulating
the image pixels:
- =png-image-pixel-for-each=
- =png-image-pixel-map=
- =png-image-pixel-fold=
** Update and improve the documentation
** Add new tests

* Changes in version 0.7.2 (2024-02-10)
** Fix ellipse drawing                                               :BUGFIX:
Guile-PNG would fail to draw an ellipse at the specified position due to
rational number calculation errors.  Now it is fixed.
** Fix rectangle drawing                                             :BUGFIX: