@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2021-2024 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2021-2026 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-PNG.
 ##
@@ -25,7 +25,8 @@ SCM_TESTS = \
 	filter.scm	\
 	image.scm	\
 	graphics.scm	\
-	image-processing.scm
+	image-processing.scm \
+	cli.scm
 
 TESTS = ${SCM_TESTS}
 
